sidebar no longer displays when on mobile devices

--- a/src/components/ChatRoom.css
+++ b/src/components/ChatRoom.css
@@ -215,4 +215,9 @@
     padding: 0.25em
   }
  }
+@media (min-width: 768px) {
+    #sidebar {
+        display: block;
+    }
+}
 
